--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -1,3 +1,39 @@
 .main {
-  /* padding: 10px; */
+  font-family: 'Poppins', sans-serif;
+  height: 100vh;
+}
+
+.welcome {
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  animation: welcome ease-in-out 3s both;
+  font-size: 2.5rem;
+  height: 100%;
+}
+
+@keyframes welcome {
+  0% {opacity: 0;}
+  70% {opacity: 1;}
+  100% {opacity: 0;}
+}
+
+.header-container {
+  border-bottom: 1px solid black;
+  animation: header-border ease-in-out 0.75s both;
+}
+
+@keyframes header-border {
+  0% {width: 0%;}
+  100% {width: 100%;}
+}
+
+.header {
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  animation: header-title ease-in-out 0.75s both;
+}
+
+@keyframes header-title {
+  0% {transform: translateY(-100%);}
+  100% {transform: translateY(0%);}
 }
