--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -37,3 +37,27 @@
   0% {transform: translateY(-100%);}
   100% {transform: translateY(0%);}
 }
+
+.login-container {
+  border: 1px solid black;
+  border-radius: 3px;
+  width: 50%;
+  height: 30%;
+  margin-top: 50px;
+}
+
+.login-title {
+  text-transform: uppercase;
+}
+
+.login-user {
+  font-size: 16px;
+  text-transform: uppercase;
+  margin-top: 25px;
+}
+
+.login-pw {
+  font-size: 16px;
+  text-transform: uppercase;
+  margin-top: 25px;
+}
